libs/pavex_macros/tests/pre_process/fail/not_a_function.rs
use pavex_macros::pre_process;

pub struct A;

impl A {
    #[pre_process]
    const A: usize = 42;
}

fn main() {}
